--- a/Artywiz/covid.html
+++ b/Artywiz/covid.html
@@ -172,7 +172,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
-                                                <p align="left" style="font-weight: bold; font-size: 24px; line-height: 31px; color: #4A4A4A;">
+                                                <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
                                                     Sécurisez le redémarrage des activités sportives
                                                 </p>
                                                 <p align="left">
@@ -214,16 +214,15 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#EDC32C" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597249006/covid/masque.png" alt="icon"
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597296512/covid/masque-short-width.png" alt="icon"
                                                 width="295"
-                                                height="205"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
                                         </td>
                                     </tr>
                                     <!--end icon-->
                                     <tr>
-                                        <td height="17"></td>
+                                        <td height="6"></td>
                                     </tr>
                                     <!--title-->
                                     <tr>
@@ -238,7 +237,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                             </td>
                         </tr>
                         <tr>
-                            <td height="15"></td>
+                            <td height="16"></td>
                         </tr>
                     </table>
                 </td>
@@ -268,7 +267,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                     <!--end img-->
                                     <tr>
-                                        <td height="20"></td>
+                                        <td height="6"></td>
                                     </tr>
                                     <!--title-->
                                     <tr align="center">
@@ -302,13 +301,13 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                     <!--end img-->
                                     <tr>
-                                        <td height="20"></td>
+                                        <td height="6"></td>
                                     </tr>
                                     <!--title-->
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:18px; line-height: 23px; color:#3E586B;font-weight:bold;">
-                                            <single label="title">Vêtements et accessoires</single>
+                                            <single label="title">Accès et désinfection</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -394,7 +393,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td height="35" align="left"
                                             style="font-family:Open sans, Arial, Sans-serif; font-weight: bold; font-size:24px; color:#FFFFFF;">
-                                            FORMATION EN LIGNE GRATUITE
+                                            FORMATION GRATUITE EN LIGNE
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -472,7 +471,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size: 18px; color:#3E586B;line-height:28px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 23px;">
-                                                    <b>adress : </b>
+                                                    <b>par email : </b>
                                                     <a href="mailto:philippe.seiter@artyplanet.com" style="color: #3E586B;">philippe.seiter@artyplanet.com</a>
                                                 </p>
                                             </multi>
@@ -544,7 +543,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     <td
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 13px; color:#FFFFFF;line-height:28px;">
                                                         <multi label="content">
-                                                            <p align="center" style="line-height: 20px; margin: 0; margin-bottom: 10px;">
+                                                            <p align="center" style="line-height: 20px; margin: 0; margin-bottom: 18px;">
                                                                 rendez-vous sur : <a href="https://artywiz.io/se-connecter" target="_blank" style="color: #fff;">artywiz.io/se-connecter</a>
                                                             </p>
                                                         </multi>
@@ -556,8 +555,35 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     <td
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 24px; color:#FFFFFF;line-height:28px;">
                                                         <multi label="content">
+                                                            <p align="center" style="line-height: 20px; margin: 0; margin-bottom: 10px;">
+                                                                <b>VOTRE LOGIN :</b>
+                                                            </p>
+                                                        </multi>
+                                                    </td>
+                                                </tr>
+                                                <!--end content-->
+                                                <!--content-->
+                                                <tr>
+                                                    <td
+                                                        style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#FFFFFF;line-height:28px;">
+                                                        <multi label="content">
                                                             <p align="center" style="line-height: 20px; margin: 0;">
-                                                                <b>VOTRE LOGIN / MOT DE PASSE :</b>
+                                                                <u>l’email LGEF de votre club</u>
+                                                            </p>
+                                                        </multi>
+                                                    </td>
+                                                </tr>
+                                                <!--end content-->
+                                                <tr>
+                                                    <td height="30"></td>
+                                                </tr>
+                                                <!--content-->
+                                                <tr>
+                                                    <td
+                                                        style="font-family:Open sans, Arial, Sans-serif; font-size: 24px; color:#FFFFFF;line-height:28px;">
+                                                        <multi label="content">
+                                                            <p align="center" style="line-height: 31px; margin: 0;">
+                                                                <b>MOT DE PASSE :</b>
                                                             </p>
                                                         </multi>
                                                     </td>
@@ -568,7 +594,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                     <!--end button-->
                                     <tr>
-                                        <td height="40"></td>
+                                        <td height="10"></td>
                                     </tr>
                                     <!--content-->
                                     <tr>
@@ -803,7 +829,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Animez votre communauté,</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Animez votre communauté,</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -837,7 +863,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Annoncez les matchs de vos équipes,</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Annoncez les matchs de vos équipes,</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -871,7 +897,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Communiquez les résultats des matchs</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Communiquez les résultats des matchs</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -905,7 +931,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Préparer une nouvelle saison,</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Préparer une nouvelle saison,</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -939,7 +965,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Mesures <br>sanitaires</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Mesures <br>sanitaires</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -973,7 +999,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#607D8B;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;">Organiser <br>un évènement</single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Organiser <br>un évènement</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
