--- a/Artywiz/covid.html
+++ b/Artywiz/covid.html
@@ -52,7 +52,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596597710/covid/main-bg.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597828829/covid/main-bg.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -168,10 +168,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     Sécurisez le redémarrage des activités sportives
                                                 </p>
                                                 <p align="left">
-                                                    Pour faciliter la mise en place des mesures sanitaires au sein de votre club, condition indispensable à la reprise des activités sportives, nous vous avons préparé une douzaine de documents personnalisables, à télécharger aux formats affiches, publication pour les réseaux sociaux ou emailing. <br>
-                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, en quelques minutes chrono réalisez l’ensemble des documents indispensables, à l’image de votre club. <br><br>
-
-                                                    Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez valoriser vos sponsors...
+                                                    Pour faciliter la mise en place des mesures sanitaires au sein de votre club, condition indispensable à la reprise des activités sportives, nous vous avons préparé toute une série de documents personnalisables, que vous pourrez télécharger et communiquer par tous les moyens aux membres de votre club : Affiches, emailing, bannière web, publication pour les réseaux sociaux.
+                                                    <br><br>
+                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, réalisez l’ensemble des documents indispensables pour accompagner les mesures sanitaires mises en place, à l’image de votre club, en quelques minutes chrono! <br>
+                                                    Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez également valoriser vos sponsors…
                                                 </p>
                                             </multi>
                                         </td>
@@ -205,8 +205,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" bgcolor="#EDC32C" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597296512/covid/masque-short-width.png" alt="icon"
+                                        <td align="center" bgcolor="#EB7F8E" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597828891/covid/masque-short-width.png" alt="icon"
                                                 width="295"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -401,7 +401,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     Inscrivez-vous à nos sessions de formation en ligne ARTYWIZ. <br>
                                                     Chaque vendredi soir sur <span style="font-size: 18px;"><b>Artywiz.io/webinar</b></span> nous présentation une thématique de communication spécifique aux clubs de football.
                                                     <br><br>
-                                                    <b>Module 1 : Vendredi 21 Aout 2020 à 19h (30 minutes)</b>
+                                                    <b>Module 1 : Vendredi 28 Aout 2020 à 19h (30 minutes)</b>
                                                     <br><br>
                                                     <b>«réaliser mes documents relatifs aux mesures sanitaires»</b>
                                                 </p>
@@ -463,7 +463,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size: 18px; color:#3E586B;line-height:28px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 23px;">
-                                                    <b>par email : </b>
                                                     <a href="mailto:philippe.seiter@artyplanet.com" style="color: #3E586B;">philippe.seiter@artyplanet.com</a>
                                                 </p>
                                             </multi>
@@ -570,7 +569,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#419BF9;">
                                                         <multi label="content">
                                                             <p align="center" style="line-height: 20px; margin: 0;">
-                                                                l’email LGEF de votre club
+                                                                {{ $props['to'] }}
                                                             </p>
                                                         </multi>
                                                     </td>
@@ -596,7 +595,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 18px; color:#FFFFFF;">
                                                         <multi label="content">
                                                             <p align="center" style="line-height: 23px; margin: 0;">
-                                                                <b>MOT DE PASSE :</b>
+                                                                <b>VOTRE MOT DE PASSE :</b>
                                                             </p>
                                                         </multi>
                                                     </td>
