--- a/Artywiz/covid.html
+++ b/Artywiz/covid.html
@@ -52,7 +52,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597828829/covid/main-bg.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597903336/covid/main-bg.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -168,9 +168,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     Sécurisez le redémarrage des activités sportives
                                                 </p>
                                                 <p align="left">
-                                                    Pour faciliter la mise en place des mesures sanitaires au sein de votre club, condition indispensable à la reprise des activités sportives, nous vous avons préparé toute une série de documents personnalisables, que vous pourrez télécharger et communiquer par tous les moyens aux membres de votre club : Affiches, emailing, bannière web, publication pour les réseaux sociaux.
+                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables, que vous pourrez télécharger et communiquer par tous les moyens au sein de votre club : Affichage, emails, bannière web, publication pour les réseaux sociaux... 
                                                     <br><br>
-                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, réalisez l’ensemble des documents indispensables pour accompagner les mesures sanitaires mises en place, à l’image de votre club, en quelques minutes chrono! <br>
+                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, réalisez l’ensemble des documents indispensables, à l’image de votre club et en quelques minutes chrono! <br>
                                                     Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez également valoriser vos sponsors…
                                                 </p>
                                             </multi>
@@ -206,8 +206,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#EB7F8E" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597828891/covid/masque-short-width.png" alt="icon"
-                                                width="295"
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597903509/covid/masque.png" alt="icon"
+                                                width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
                                         </td>
@@ -364,7 +364,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                         <tr>
                             <td align="center">
                                 <!--image-->
-                                <table width="165" height="250" class="table-full" border="0" align="left" cellpadding="0" cellspacing="0">
+                                <table width="165" height="190" class="table-full" border="0" align="left" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td width="100%" align="center" style="line-height:0px;"><img
                                                 src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597250150/covid/foot-icon.png" alt="img" width="165"
@@ -399,11 +399,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             <multi label="content">
                                                 <p align="left" style="font-size: 13px; line-height: 20px;">
                                                     Inscrivez-vous à nos sessions de formation en ligne ARTYWIZ. <br>
-                                                    Chaque vendredi soir sur <span style="font-size: 18px;"><b>Artywiz.io/webinar</b></span> nous présentation une thématique de communication spécifique aux clubs de football.
-                                                    <br><br>
-                                                    <b>Module 1 : Vendredi 28 Aout 2020 à 19h (30 minutes)</b>
-                                                    <br><br>
-                                                    <b>«réaliser mes documents relatifs aux mesures sanitaires»</b>
+                                                    Chaque vendredi soir sur <span style="font-size: 18px;"><b>formations.artywiz.io/</b></span> nous présentation une thématique de communication spécifique aux clubs de football.
                                                 </p>
                                             </multi>
                                         </td>
